# ipfs-on-icp

./: Cargo.toml  LICENSE  README.md  canister_ids.json  dfx.json  generate-did.sh
src/ic-ipfs-backend/: Cargo.toml  ic-ipfs-backend.did
src/ic-ipfs-backend/src/: ipfs.rs  lib.rs
src/ic-ipfs-frontend/: README.md  angular.json  package-lock.json  package.json  tsconfig.json
src/ic-ipfs-frontend/public/: .ic-assets.json5
src/ic-ipfs-frontend/src/: agents.ts  index.html
src/ic-ipfs-frontend/src/app/: app.html  app.spec.ts  app.ts  backend.ts  ipfs.ts
src/ic-ipfs-frontend/src/sw/: sw.ts
