[package]
name = "ic-ipfs-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
cid = "0.11.1"
ic-cdk = "0.18"
ic-cdk-timers = "0.12" # Feel free to remove this dependency if you don't need timers
ic-http-certification = "3.0.3"
ic-stable-structures = "0.7.2"
multihash-codetable = { version = "0.1.4", features = ["sha2"] }
